--- a/app/src/main/res/layout/platform_list_item.xml
+++ b/app/src/main/res/layout/platform_list_item.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    author Edwin Kai-Yin Tam
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
