--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
                 android:icon="@drawable/ic_menu_home"
                 android:title="@string/menu_home"/>
         <item
+                android:id="@+id/nav_account"
+                android:icon="@drawable/ic_menu_account"
+                android:title="@string/menu_account"/>
+        <item
                 android:id="@+id/nav_qr"
                 android:icon="@drawable/ic_menu_qr"
                 android:title="@string/menu_qr"/>
