--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -70,7 +70,7 @@
                     android:text="Palingstraat 25"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" tools:layout_editor_absoluteY="163dp"
-                    android:id="@+id/Palingstraat 25" app:layout_constraintEnd_toEndOf="parent"
+                    android:id="@+id/Palingstraat" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"/>
             <TextView
                     android:text="Antwerpen"
@@ -86,7 +86,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.512"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="25dp" app:layout_constraintBottom_toBottomOf="parent"
                     android:background="@drawable/rounded_corner"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
