--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -25,7 +25,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView4" android:layout_marginTop="12dp"
                 android:id="@+id/layoutText" android:backgroundTint="@color/design_default_color_background"
-                android:background="@color/design_default_color_background">
+                android:background="@color/design_default_color_background"
+                app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
                     android:text="jan@cityofideas.be"
@@ -103,14 +104,14 @@
                     android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.512"
                     android:layout_marginBottom="40dp" app:layout_constraintBottom_toBottomOf="parent"
                     android:background="@drawable/rounded_corner"/>
-            <TextView
-                    android:text="Afmelden"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView17" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:textColor="@color/design_default_color_on_secondary"
-                    android:textSize="18sp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+                android:text="Afmelden"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView18"
+                android:textColor="@color/design_default_color_background" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/layoutText" android:textSize="18sp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
