--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -7,7 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/layoutMain"
-            android:background="@drawable/side_nav_bar">
+            android:background="@color/colorCard">
 
 
         <ImageView
@@ -19,8 +19,8 @@
                 android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" app:srcCompat="@drawable/ic_menu_account"/>
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="507dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView4" android:layout_marginTop="12dp"
@@ -103,14 +103,14 @@
                     android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.512"
                     android:layout_marginBottom="40dp" app:layout_constraintBottom_toBottomOf="parent"
-                    android:background="@drawable/rounded_corner"/>
+            />
         </androidx.constraintlayout.widget.ConstraintLayout>
         <TextView
                 android:text="Afmelden"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView18"
-                android:textColor="@color/design_default_color_background" app:layout_constraintEnd_toEndOf="parent"
+                android:id="@+id/logoutTv"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/layoutText" android:textSize="18sp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
