--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,18 +12,18 @@
                 android:id="@+id/nav_account"
                 android:icon="@drawable/ic_menu_account"
                 android:title="@string/menu_account"/>
-        <item
-                android:id="@+id/nav_qr"
-                android:icon="@drawable/ic_menu_qr"
-                android:title="@string/menu_qr"/>
-        <item
-                android:id="@+id/nav_ideations"
-                android:icon="@drawable/ic_menu_ideations"
-                android:title="@string/menu_ideations"/>
-        <item
-                android:id="@+id/nav_questionnaires"
-                android:icon="@drawable/ic_menu_questionnaires"
-                android:title="@string/menu_questionnaires"/>
+        <!--<item-->
+                <!--android:id="@+id/nav_qr"-->
+                <!--android:icon="@drawable/ic_menu_qr"-->
+                <!--android:title="@string/menu_qr"/>-->
+        <!--<item-->
+                <!--android:id="@+id/nav_ideations"-->
+                <!--android:icon="@drawable/ic_menu_ideations"-->
+                <!--android:title="@string/menu_ideations"/>-->
+        <!--<item-->
+                <!--android:id="@+id/nav_questionnaires"-->
+                <!--android:icon="@drawable/ic_menu_questionnaires"-->
+                <!--android:title="@string/menu_questionnaires"/>-->
         <item
                 android:id="@+id/nav_info"
                 android:icon="@drawable/ic_menu_info"
